[package]
name = "net4"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10.9"
serde = { version = "1.0.228", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4.3"
sled = "0.34"
thiserror = "2.0.18"
serde_json = "1"
